# aoc

./: .gitignore  Cargo.toml  gen.py
aoc2020/: Cargo.toml
aoc2020/src/: day1.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc2021/: Cargo.toml
aoc2021/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
