[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Akida31 <47895118+Akida31@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"

[[bin]]
name = "2020-1"
path = "src/day1.rs"
[[bin]]
name = "2020-2"
path = "src/day2.rs"
[[bin]]
name = "2020-3"
path = "src/day3.rs"
[[bin]]
name = "2020-4"
path = "src/day4.rs"
[[bin]]
name = "2020-5"
path = "src/day5.rs"
[[bin]]
name = "2020-6"
path = "src/day6.rs"
[[bin]]
name = "2020-7"
path = "src/day7.rs"
[[bin]]
name = "2020-8"
path = "src/day8.rs"
[[bin]]
name = "2020-9"
path = "src/day9.rs"
[[bin]]
name = "2020-11"
path = "src/day11.rs"
